[package]
name = "record-rep-weights"
version = "0.1.0"
edition = "2021"

[dependencies]
rsnano_core = { path = "../../core" }
rsnano_rpc_messages = { path = "../../rpc_messages" }
rsnano_rpc_client = { path = "../../rpc_client" }
anyhow = "1"
tokio = { version = "1", features = [
    "rt",
    "macros",
] }
clap = { version = "4.5.23", features = ["derive"] }
